--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -9,16 +9,26 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <style>
+            .custom-button {
+            position: absolute;
+            top: 0%;
+            right: 0%; /* 右に微調整 */
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 <body>
-    <h1>JRAスクレイピング</h1>
+    <h1>ZEROSENSE</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">テキスト置換</a>
+        <a class="navbar-brand" href="/">スクレイピング</a>
     </nav>
+    <div class="position-relative" style="left: -1000px; top: 50px;">
     <form action="button" method="POST">
         {% csrf_token %}
-    <button type="submit" class="custom-button">スクレイピング</button>
+    <button type="submit" class="btn btn-primary custom-button">スクレイピング実行</button>
     </form>
+    </div>
     <div class="container mt-4">
     {% block main %}
     {% endblock %}
