--- a/angular_app/src/app/racenames/racenames.component.html
+++ b/angular_app/src/app/racenames/racenames.component.html
@@ -1,1 +1,5 @@
-<p>racenames works!</p>
+<ul>
+    <li *ngFor="let race of raceNames">
+        <a routerLink="/racedetail/{{ race.race_name }}">{{ race.race_name }}</a>
+    </li>
+</ul>
