--- a/angular_app/src/app/racenames/racenames.component.html
+++ b/angular_app/src/app/racenames/racenames.component.html
@@ -1,5 +1,5 @@
 <ul>
     <li *ngFor="let race of raceNames">
-        <a routerLink="/racedetail/{{ race.race_name }}">{{ race.race_name }}</a>
+        <a routerLink="/racedetail/{{ race.name }}">{{ race.name }}</a>
     </li>
 </ul>
