session.serviceのsignupのところから

--- a/angular_app/src/app/login/login.component.html
+++ b/angular_app/src/app/login/login.component.html
@@ -9,4 +9,6 @@
     <input type="password" id="password" name="password" [(ngModel)]="password" required>
   </div>
   <button type="submit">Login</button>
+  <button class="btn btn-lg btn-info btn-block" type="submit" (click)="submitLogin()">LOGIN</button><!-- submitLogin()を追加 -->
+
 </form>
