ローディングスピナーについて調べる

--- a/angular_app/src/app/header/header.component.html
+++ b/angular_app/src/app/header/header.component.html
@@ -6,6 +6,7 @@
           <a routerLink="/account/login">Login</a>
     </span>
     <span class="navbar-text" *ngIf="login">
+        <h2> {{username}} </h2>
           <a routerLink="/account/login" (click)="logout()">Logout</a>
     </span>
     <!-- 分岐ここまで -->
