--- a/angular_app/src/app/racenames/racenames.component.scss
+++ b/angular_app/src/app/racenames/racenames.component.scss
@@ -2,10 +2,9 @@
     display: none;
   }
 
+  .button {
+    cursor: pointer;
+  }
+  
 
-.mat-calendar-body-cell.selectable-date .mat-calendar-body-cell-content,
-.mat-calendar-body-cell.selectable-date .mat-focus-indicator {
-background-color: #ffcccc;
-}
-  
-  
+
