--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -44,6 +44,8 @@
     {% endblock %}
     {% block get-grade-button %}
     {%endblock %}
+    {% block get-graderesult-button %}
+    {%endblock %}
     <div class="container mt-4">{% block main %} {% endblock %}</div>
   </body>
 </html>
