過去のレース結果を作る

--- a/angular_app/src/app/header/header.component.html
+++ b/angular_app/src/app/header/header.component.html
@@ -7,6 +7,7 @@
         <h2> {{userName}} </h2>
           <a routerLink="/account/login" (click)="logout()">Logout</a>
           <a routerLink="newgame">新規大会作成</a>
+          <a routerLink="joingame">大会検索</a>
     </span>
     <!-- 分岐ここまで -->
 
