コメント表示から作る

--- a/angular_app/src/app/app.component.html
+++ b/angular_app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <a routerLink=""><h1>{{title}}</h1></a>
 <app-header></app-header>
-<h1>{{gameName}}</h1>
+<h1 (click)="moveGameMain(gameName)">{{gameName}}</h1>
 <router-outlet></router-outlet>
