--- a/angular_app/src/app/gamemain/gamemain.component.html
+++ b/angular_app/src/app/gamemain/gamemain.component.html
@@ -1,19 +1,10 @@
-<h3>参加中の大会</h3>
-<div *ngIf="games; then thenBlock else nogame"></div>
-    <ng-template #thenBlock>
-         <p *ngFor="let game of games">
-            {{game}}
-        </p>          
-    </ng-template>
-    <ng-template #nogame>
-        参加中の大会がありません        
-   </ng-template>   
+
 <h3>投票受付中のレース一覧</h3>
 <div *ngIf="isVotableRace; then votableBlock else noVote"></div>
     <ng-template #votableBlock>
         <table>
             <tbody>
-                <tr *ngFor="let race of isVotableRace" (click)="moveVote(race)">
+                <tr *ngFor="let race of isVotableRace" (click)="moveVote(race,game)">
                         <td>{{race.date}}</td>
                         <td>{{race.name}}</td>
                         <td>{{race.grade}}</td>
