10レース分結果取得するのに変更するところから

--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -12,6 +12,6 @@
    </ng-template>
 </ng-template>
 <ng-template #nologin>
-    <h2><a routerLink="/account/login">ログインする</a></h2>
+    <h2><a routerLink="/account/login"></a></h2>
 </ng-template>
 
