払戻金をスクレイピング

--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -1,27 +1,13 @@
-{% extends "base.html" %}
-{% block get-result-button %}
-<div style="padding: 20px;">
-  <form action="getresult" method="POST">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">
-      レース結果を取得
-    </button>
-  </form>
-</div>
-{% endblock %}
-{% block get-grade-button %}
-<div style="padding: 20px;">
+{% extends "base.html" %} {% block get-grade-button %}
+<div style="padding: 20px">
   <!-- Adjust top property accordingly -->
   <form action="getgraderace" method="POST">
     {% csrf_token %}
-    <button type="submit" class="btn btn-primary">
-      重賞レースを取得
-    </button>
+    <button type="submit" class="btn btn-primary">重賞レースを取得</button>
   </form>
 </div>
-{% endblock %}
-{% block get-graderesult-button %}
-<div style="padding: 20px;">
+{% endblock %} {% block get-graderesult-button %}
+<div style="padding: 20px">
   <!-- Adjust top property accordingly -->
   <form action="getgraderaceresult" method="POST">
     {% csrf_token %}
