--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -40,8 +40,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">スクレイピング</a>
     </nav>
-    {% block get-grade-button %} {%endblock %} {% block get-graderesult-button
-    %} {%endblock %}
+    {% block get-grade-button %} {%endblock %} {% block get-graderesult-button %} {%endblock %}
     <div class="container mt-4">{% block main %} {% endblock %}</div>
   </body>
 </html>
