--- a/angular_app/src/app/header/header.component.html
+++ b/angular_app/src/app/header/header.component.html
@@ -4,8 +4,8 @@
             <a routerLink="/account/login">Login</a> 
     </span>
     <span class="navbar-text" *ngIf="login">
-        <h2> {{userName}} </h2>
-          <a routerLink="/account/login" (click)="logout()">Logout</a>
+        <a routerLink="/updatename"><h2> {{userName}} </h2></a>
+          <span (click)="logout()">Logout</span> 
           <a routerLink="newgame">新規大会作成</a>
           <a routerLink="joingame">大会検索</a>
     </span>
