--- a/angular_app/src/app/gamemain/gamemain.component.html
+++ b/angular_app/src/app/gamemain/gamemain.component.html
@@ -78,5 +78,5 @@
     <ng-template #noVotable>
         投票対象のレースがありません        
    </ng-template>   
-<a routerLink="[]"></a><h3>過去のレース結果</h3>
+<a (click)="moveResult()"><h3>過去のレース結果</h3></a>
 <h3>サイトポリシー</h3>
