--- a/angular_app/src/app/raceresult/raceresult.component.html
+++ b/angular_app/src/app/raceresult/raceresult.component.html
@@ -1,18 +1,214 @@
-<h2>{{race.name}}{{race.grade}}</h2>
-<div style="display: flex;">
-    <div>
-            <h3>出走馬</h3>
-<div *ngFor="let horse of horseList">
-    <p style="margin:0; padding: 0;">{{horse.name}}</p>
+<h2>{{ race.name }}{{ race.grade }}</h2>
+<div>
+  <h3>レース結果</h3>
+  <div>
+    <table>
+      <thead>
+        <tr>
+          <th>順位</th>
+          <th>出走馬</th>
+          <th *ngFor="let vote of voteList">{{ vote.name }}</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let horse of horseList">
+          <td>{{ horse.place }}</td>
+          <td>{{ horse.name }}</td>
+          <td *ngFor="let vote of voteList">
+            <div
+              *ngIf="horse.place === vote.first.place; then thenFirstBlock; else elseFirstBlock"
+            ></div>
+            <ng-template #thenFirstBlock> ◎ </ng-template>
+            <ng-template #elseFirstBlock> </ng-template>
+            <div
+              *ngIf="horse.place === vote.second.place; then thenSecondBlock; else elseSecondBlock"
+            ></div>
+            <ng-template #thenSecondBlock> ○ </ng-template>
+            <ng-template #elseSecondBlock> </ng-template>
+            <div
+              *ngIf="horse.place === vote.third.place; then thenThirdBlock; else elseThirdBlock"
+            ></div>
+            <ng-template #thenThirdBlock> ▲ </ng-template>
+            <ng-template #elseThirdBlock> </ng-template>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
-    </div>
-<div>
-    <h3>参加者の投票</h3>
-<div>
-    <tr *ngFor="let vote of voteList">
-        <div *ngIf="vote.name!=userName">
-            <td>{{vote.name}}</td><td>◎：{{vote.first.name}}</td><td>○：{{vote.second.name}}</td><td>▲：{{vote.third.name}}</td><td>{{vote.comment}}</td>
-        </div>
+<div>払戻金</div>
+<table>
+  <thead>
+    <tr>
+      <th>馬券</th>
+      <th>金額</th>
+      <th *ngFor="let vote of voteList">{{ vote.name }}</th>
     </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>単勝</td>
+      <td>{{ odds.tan }}</td>
+      <td *ngFor="let vote of voteList">
+        <div *ngIf="1 === vote.first.place; then thenFirstBlock; else elseFirstBlock"></div>
+        <ng-template #thenFirstBlock> 当 </ng-template>
+        <ng-template #elseFirstBlock> </ng-template>
+      </td>
+    </tr>
+
+    <tr>
+      <td>複勝1</td>
+      <td>{{ odds.fuku1 }}</td>
+      <td *ngFor="let vote of voteList">
+        <div *ngIf="1 === vote.first.place; then thenBlock; else elseBlock"></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>複勝2</td>
+      <td>{{ odds.fuku2 }}</td>
+      <td *ngFor="let vote of voteList">
+        <div *ngIf="2 === vote.first.place; then thenBlock; else elseBlock"></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>複勝3</td>
+      <td>{{ odds.fuku3 }}</td>
+      <td *ngFor="let vote of voteList">
+        <div *ngIf="3 === vote.first.place; then thenBlock; else elseBlock"></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>馬連</td>
+      <td>{{ odds.umaren }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="
+            (2 - vote.first.place * vote.second.place) *
+              (2 - vote.third.place * vote.second.place) *
+              (2 - vote.third.place * vote.second.place) ==
+              0;
+            then thenBlock;
+            else elseBlock
+          "
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>馬単</td>
+      <td>{{ odds.umatan }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="1 === vote.first.place && 2 === vote.second.place; then thenBlock; else elseBlock"
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>W1-2</td>
+      <td>{{ odds.wide12 }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="
+            (2 - vote.first.place * vote.second.place) *
+              (2 - vote.second.place * vote.third.place) *
+              (2 - vote.first.place * vote.third.place) ==
+              0;
+            then thenBlock;
+            else elseBlock
+          "
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>W1-3</td>
+      <td>{{ odds.wide13 }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="
+            (3 - vote.first.place * vote.second.place) *
+              (3 - vote.second.place * vote.third.place) *
+              (3 - vote.first.place * vote.third.place) ==
+              0;
+            then thenBlock;
+            else elseBlock
+          "
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>W2-3</td>
+      <td>{{ odds.wide23 }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="
+            (vote.first.place === 2 || vote.second.place === 2 || vote.third.place === 2) &&
+              (vote.first.place === 3 || vote.second.place === 3 || vote.third.place === 3);
+            then thenBlock;
+            else elseBlock
+          "
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>3連複</td>
+      <td>{{ odds.trio }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="
+            vote.first.place * vote.second.place * vote.third.place === 6;
+            then thenBlock;
+            else elseBlock
+          "
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+    <tr>
+      <td>3連単</td>
+      <td>{{ odds.tierce }}</td>
+      <td *ngFor="let vote of voteList">
+        <div
+          *ngIf="
+            vote.first.place === 1 && vote.second.place === 2 && vote.third.place === 3;
+            then thenBlock;
+            else elseBlock
+          "
+        ></div>
+        <ng-template #thenBlock> 当 </ng-template>
+        <ng-template #elseBlock> </ng-template>
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="2">獲得金額</td>
+      <td *ngFor="let vote of voteList">
+        {{ vote.score }}
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div>コメント</div>
+<div *ngFor="let vote of voteList">
+  <span>{{ vote.name }}</span
+  ><span>{{ vote.comment }}</span>
 </div>
-<button (click)="goBack()">戻る</button>
+<div>
+  <button (click)="goBack()">戻る</button>
+</div>
