--- a/angular_app/src/app/updatename/updatename.component.html
+++ b/angular_app/src/app/updatename/updatename.component.html
@@ -1,4 +1,5 @@
 <h2>表示名の変更</h2>
-<input type="text" [placeholder]="currentUserName" [(ngModel)]="currentUserName">
+<input type="text" [placeholder]="currentUserName" [(ngModel)]="currentUserName" />
 <button (click)="updataName()">変更する</button>
+<a routerLink="/deleteacount/">アカウントを削除する</a>
 <button (click)="goBack()">戻る</button>
