--- a/angular_app/src/app/vote/vote.component.html
+++ b/angular_app/src/app/vote/vote.component.html
@@ -1,46 +1,67 @@
-    <h2>{{race.name}}{{race.grade}}</h2>
-    <div style="display: flex;">
-        <div>
-                <h3>出走馬</h3>
-    <div *ngFor="let horse of horseList">
-        <p style="margin:0; padding: 0;">{{horse.name}}</p>
-    </div>
-        </div>
-<div>
-        <h3>参加者の投票</h3>
-    <div>
-        <tr *ngFor="let vote of voteList">
-            <div *ngIf="vote.name!=userName">
-                <td>{{vote.name}}</td><td>◎：{{vote.first.name}}</td><td>○：{{vote.second.name}}</td><td>▲：{{vote.third.name}}</td><td>{{vote.comment}}</td>
-            </div>
-        </tr>
-    </div>
+<h2>{{ race.name }}{{ race.grade }}</h2>
+<div style="display: flex">
+  <table>
+    <thead>
+      <tr>
+        <td>出走馬</td>
+        <td *ngFor="let vote of voteList">{{ vote.name }}</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let horse of horseList">
+        <td>{{ horse.name }}</td>
+        <td *ngFor="let vote of voteList">
+          <div
+            *ngIf="horse.name === vote.first.name; then thenFirstBlock; else elseFirstBlock"
+          ></div>
+          <ng-template #thenFirstBlock> ◎ </ng-template>
+          <ng-template #elseFirstBlock> </ng-template>
+          <div
+            *ngIf="horse.name === vote.second.name; then thenSecondBlock; else elseSecondBlock"
+          ></div>
+          <ng-template #thenSecondBlock> ○ </ng-template>
+          <ng-template #elseSecondBlock> </ng-template>
+          <div
+            *ngIf="horse.name === vote.third.name; then thenThirdBlock; else elseThirdBlock"
+          ></div>
+          <ng-template #thenThirdBlock> ▲ </ng-template>
+          <ng-template #elseThirdBlock> </ng-template>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-
-</div>
-
+<div>コメント</div>
+<div class="comment-section" *ngFor="let vote of voteList">{{ vote.name }}: {{ vote.comment }}</div>
+<div>投票</div>
 <form (ngSubmit)="onSubmit()">
-    <label for="first">◎：</label>
-    <select name="firsthorse" id="first" [(ngModel)]="myVote.first" required>
-        <option value=null disabled>選択してください</option>
-        <option [value]="horse.id" *ngFor="let horse of horseList">
-            {{horse.name}}
-        </option>
-    </select>
-    <label for="second">○：</label>
-    <select name="secondhorse" id="second" [(ngModel)]="myVote.second" required>
-        <option value=null disabled>選択してください</option>
-        <option [value]="horse.id" *ngFor="let horse of horseList">
-            {{horse.name}}
-        </option>
-    </select>
-    <label for="third">▲：</label>
-    <select name="thirdhorse" id="third" [(ngModel)]="myVote.third" required>
-        <option value=null disabled>選択してください</option>
-        <option [value]="horse.id" *ngFor="let horse of horseList">
-            {{horse.name}}
-        </option>
-    </select>
-    コメント：<textarea name="comment" [(ngModel)]="myVote.comment" id="comment" cols="30" rows="10"></textarea>
-    <button type="submit">投票する</button>
+  <label for="first">◎：</label>
+  <select name="firsthorse" id="first" [(ngModel)]="myVote.first" required>
+    <option value="null" disabled>選択してください</option>
+    <option [value]="horse.id" *ngFor="let horse of horseList">
+      {{ horse.name }}
+    </option>
+  </select>
+  <label for="second">○：</label>
+  <select name="secondhorse" id="second" [(ngModel)]="myVote.second" required>
+    <option value="null" disabled>選択してください</option>
+    <option [value]="horse.id" *ngFor="let horse of horseList">
+      {{ horse.name }}
+    </option>
+  </select>
+  <label for="third">▲：</label>
+  <select name="thirdhorse" id="third" [(ngModel)]="myVote.third" required>
+    <option value="null" disabled>選択してください</option>
+    <option [value]="horse.id" *ngFor="let horse of horseList">
+      {{ horse.name }}
+    </option>
+  </select>
+  コメント：<textarea
+    name="comment"
+    [(ngModel)]="myVote.comment"
+    id="comment"
+    cols="30"
+    rows="10"
+  ></textarea>
+  <button type="submit">投票する</button>
 </form>
